<resources>
    <string name="sound_caption">Sound:</string>
    <string name="pattern_caption">Pattern:</string>
    <string name="edit_btn1">Settings</string>
    <string name="app_name">SmartNotifier</string>
    <string name="hint_kw1">Search string 1</string>
    <string name="hint_kw2">Search string 2</string>
    <string name="hint_kw3">Search string 3</string>

    <string name="btn_select_sound_1">notification sound (1)</string>
    <string name="btn_select_sound_2">notification sound (2)</string>
    <string name="btn_select_sound_3">notification sound (3)</string>

    <!-- captions  -->
    <string name="caption_pattern">Pattern</string>
    <string name="caption_notification">Notification</string>
    <string name="caption_notify_sound">Notify Sound</string>
    <string name="caption_notification_1">Notification 1</string>
    <string name="caption_notification_2">Notification 2</string>
    <string name="caption_notification_3">Notification 3</string>
    <string name="caption_notification_4">Notification 4</string>
    <string name="caption_notification_5">Notification 5</string>
    <string name="caption_notification_6">Notification 6</string>
    <string name="caption_notification_7">Notification 7</string>
    <string name="caption_notification_8">Notification 8</string>
    <string name="caption_notification_9">Notification 9</string>
    <string name="caption_notification_10">Notification 10</string>

    <!-- hints  -->
    <string name="hinst_tap_to_select">Tap to Select</string>

    <!-- bottton actions -->
    <string name="btn_action_commit">Commit</string>
    <string name="btn_action_return">Return</string>
    <string name="btn_action_save">Save</string>

    <!-- Permissions -->
    <string name="permission_listener_title">1. Notification Access</string>
    <string name="permission_listener_message">To change notification sounds, two permissions are required. First, please enable Notification Access. You may need to tap the switch again to grant the second permission.</string>
    <string name="permission_listener_positive">Go to Settings</string>
    <string name="permission_listener_negative">Cancel</string>

    <string name="permission_post_notification_title">2. Notification Permission</string>
    <string name="permission_post_notification_message">This is the second permission. Please allow Smart Notifier to send notifications. This is necessary to play the custom sound. If the switch turned off, please tap it again.</string>
    <string name="permission_post_notification_positive">Continue</string>
    <string name="permission_post_notification_negative">Cancel</string>

    <!-- Help -->
    <string name="help_title">How to Use</string>
    <string name="help_text">
        This app changes the notification sound of the ChatGPT app based on keywords.\n\n

        <b>1. Grant Permissions</b>\n
        To use this app, you need to grant two permissions: "Notification Access" and "Notification Permission". Please enable them by tapping the switch on the main screen.\n\n

        <b>2. Set Up Rules</b>\n
        Tap the \"Settings\" button to configure up to 10 rules. For each rule, you can set a \"search keyword\" and a \"custom sound\".\n\n

        <b>3. How It Works</b>\n
        When a notification from the ChatGPT app arrives, this app will:\n
        - Check if the notification title or text contains any of your keywords.\n
        - If a match is found, it will cancel the original notification and immediately post a new one with your specified custom sound.\n\n

        For more details, please visit our website:\nhttps://github.com/Teyandei/SmartNotifier-Rev1/blob/master/README.md
    </string>

    <!-- Feedback -->
    <string name="action_send_feedback">Send feedback</string>
    <string name="feedback_email_body_header">---- Please write your feedback above this line ----</string>
    <string name="feedback_email_not_found">No email app found to send feedback.</string>
</resources>